alignment fix

--- a/paint/paint.css
+++ b/paint/paint.css
@@ -14,6 +14,7 @@
 	width: 85px; 
 	height: 650px;
 	float: right;
+	margin-top: 451px;
 	text-align: center;
 }
 
